--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive"
   },
-  "devDependencies": {
-    "less-loader": "^4.1.0"
-  }
+  "devDependencies": {}
 }
